[package]
name = "tellme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
